legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr70728.c-4.8.2-3.out.txt
pr70728.c: In function ‘fn1’:
pr70728.c:10:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int e = 0; e < 3; e = e + 1)
   ^
pr70728.c:10:3: note: use option -std=c99 or -std=gnu99 to compile your code
pr70728.c:11:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int f = 0; f < 2; f = f + 1)
     ^
pr70728.c:12:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int g = 0; g < 4; g = g + 1)
       ^
pr70728.c:13:9: error: ‘for’ loop initial declarations are only allowed in C99 mode
         for (int h = 0; h < 3; h = h + 1)
         ^
pr70728.c:14:11: error: ‘for’ loop initial declarations are only allowed in C99 mode
           for (int i = 0; i < 2; i = i + 1)
           ^
pr70728.c:15:13: error: ‘for’ loop initial declarations are only allowed in C99 mode
             for (int j = 0; j < 4; j = j + 1)
             ^
pr70728.c: In function ‘main’:
pr70728.c:22:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int k = 0; k < 5; ++k)
   ^
pr70728.c:23:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int l = 0; l < 5; ++l)
     ^
pr70728.c:24:7: error: ‘for’ loop initial declarations are only allowed in C99 mode
       for (int m = 0; m < 3; ++m)
       ^
pr70728.c:25:9: error: ‘for’ loop initial declarations are only allowed in C99 mode
         for (int n = 0; n < 4; ++n)
         ^
